@@ -1,5 +1,9 @@
 2006-06-18 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
+	* src/GParted_Core.cc: use new copy_block() in copy_filesystem()
+
+2006-06-18 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
 	* include/GParted_Core.h,
 	  src/GParted_Core.cc: renamed resize_partition to
 	  resize_move_partition to better reflect its functionality.
